Opened 17 years ago
Closed 16 years ago
#1397 closed bug (fixed)
ClipToPicture and ClipToInversePicture not implemented
Reported by: | jackburton | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
ClipToPicture and ClipToInversePicture aren't implemented. BView sends already the necessary data to app_server, but app_server currently just ignores the commands.
Some documentation about ClipToPicture can be found here: http://www.beunited.org/bebook/The%20Interface%20Kit/ViewGraphicsState.html
I also have some old proof-of-concept code laying around which implements ClipToPicture client side (attached).
Attachments (1)
Change History (5)
by , 17 years ago
comment:1 by , 16 years ago
By the way: I tested this code (with BRegion::Include() instead of BRegion::_AddRect()) on haiku and it doesn't produce the correct result, while it works correctly on beos.
comment:2 by , 16 years ago
Found the problem: looks like drawing to a B_GRAY8 bitmap doesn't work. Using a B_RGBA32 bitmap works correctly.
comment:3 by , 16 years ago
I added the client side implementation in hrev27321. A slow implementation is better than nothing.
ClipToPicture proof of concept