implemented a client side (and very slow) version of BView::ClipToPicture. See bug #1397

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27321 a95241bf-73f2-0310-859d-f6bbb57e9c96